issue #2234 continue colour updates for dark mode
courtesy of Alice

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -6094,6 +6094,11 @@ input:checked + .slider:before, input:checked + .slider::after {
   padding-top:20px;
 }
 
+.AddUserSubmit:hover{
+  color: #3F3E40;
+  background-color: #f70;
+}
+
 /********/
 
 p.list_user {
@@ -7125,15 +7130,27 @@ color:#FF7B00;
   border: solid 2px #D4D4D4;
 }
 
-.AddAlbumCancel, .RebameAlbumCancel {
+.AddAlbumCancel, .RenameAlbumCancel {
   color: #3F3E40;
   background-color: #f3f3f3;
 }
+
+.AddAlbumCancel:hover, .RenameAlbumCancel:hover{
+  color: #3F3E40;
+  background-color: #dedede;
+}
+
 .AddAlbumSubmit,
 .RenameAlbumSubmit {
   color: #3F3E40;
   background-color: #FFA836;
 }
+
+.AddAlbumSubmit:hover, .RenameAlbumSubmit:hover{
+  color: #3F3E40;
+  background-color: #f70;
+}
+
 .DeleteAlbumSubmit {
   background-color: #e74c3c;
   color: #fff;
